@@ -1,3 +1,14 @@
+Fri Apr 21 19:32:27 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * configure.ac:
+
+          Added orbsvcs/tests/Bug_2377_Regression/Makefile to
+          AC_CONFIG_FILES.
+
+        * orbsvcs/tests/Bug_2377_Regression/Makefile.am:
+
+          New file.
+
 Fri Apr 21 14:07:51 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
 	* TAO_IDL/Makefile.am:
